<?xml version="1.0"?>
<package format="2">
	<name>g29_socket_proto</name>
	<version>0.0.0</version>
	<description>The g29_socket_proto package</description>
	<maintainer email="hanyu@tsingsens.com">hanyu</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<export></export>
</package>