<!-- <?xml version="1.0"?> -->
<package format="2">
  <name>track_viz</name>
  <version>1.0.0</version>
  <description>The track_viz package</description>
  <maintainer email="fun@todo.todo">fun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>localization_msgs</depend>
  <depend>planner_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tli65_can_msgs</depend>
  <depend>tf</depend>

  <export></export>
</package>
